# Big-Brother

./: .gitignore  CMakeLists.txt  big_brother.kdev4  bigbrother.pro  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
.kdev4/: big_brother.kdev4
build-debug/: .ninja_deps  .ninja_log  Big-Brother  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-debug/.cmake/api/v1/reply/: cmakeFiles-v1-229e21e347bf1322b996.json  codemodel-v2-f350b82e7a07407dce37.json  directory-.-Debug-719b77a6e190131d1e81.json  index-2023-05-07T12-30-44-0970.json  target-Big-Brother-Debug-c171cd324c5b04e89527.json  target-Big-Brother_autogen-Debug-f75ef874a8666640dac9.json  target-Big-Brother_autogen_timestamp_deps-Debug-ae5158d328b0c2223fdd.json
build-debug/Big-Brother_autogen/: deps  moc_predefs.h
build-debug/Big-Brother_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
resource/: style.qss
